fix mobile overflow

--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ h1 {
 
 /*mobile media query */
 @media (max-width: 768px) {
-  html{
+  html, body{
     overflow-x: hidden !important;
   }
   .Gallery {
